--- a/JordanSutherland/views/game.ejs
+++ b/JordanSutherland/views/game.ejs
@@ -19,6 +19,19 @@
 </head>
 <script src="/socket.io/socket.io.js"></script>
 <script>
+
+    // load funny images
+
+    const FUNNY = [];
+
+    for (var filename = 1; filename < 22; filename++) {
+        var img = new Image();
+        img.src = "funnyImages/jerma" + filename + ".png";
+        FUNNY.push(img);
+    }
+
+    var yourImage = FUNNY[Math.floor(Math.random() * FUNNY.length)];
+
     const socket = io();
 
     let users = [];
@@ -26,16 +39,7 @@
         name: '<%= user %>',
         userId: socket.id,
     };
-    var availableCorners = [
-        'bottom-left',
-        'bottom-right',
-        'top-left',
-        'top-right',
-    ];
 
-    socket.on('corners', (data) => {
-        availableCorners = data.corners;
-    });
     socket.emit('new-user', user);
     socket.on('user-connected', data => {
         console.log(data.user.name + ' connected');
@@ -55,7 +59,6 @@
 
 </body>
 <script>
-
     const canvas = document.getElementById('canvas');
     const ctx = canvas.getContext('2d');
 
@@ -156,8 +159,8 @@
     });
 
     // screen
-    const WIDTH = Math.floor(window.innerWidth / 4), HALF_WIDTH = WIDTH / 2;
-    const HEIGHT = Math.floor(window.innerHeight / 4), HALF_HEIGHT = HEIGHT / 2;
+    const WIDTH = window.innerWidth, HALF_WIDTH = WIDTH / 2;
+    const HEIGHT = window.innerHeight, HALF_HEIGHT = HEIGHT / 2;
 
     // camera
     const DOUBLE_PI = Math.PI * 2;
@@ -184,60 +187,41 @@
         EMPQ.push(img);
     }
 
-
-
     // Game Loop
     function gameLoop() {
-        // Update FPS
-        cycleCount++;
-        if (cycleCount >= 60) cycleCount = 0;
-        var startTime = Date.now();
-        var cycleTime = startTime - oldCycleTime;
-        oldCycleTime = startTime;
-        if (cycleCount % 60 == 0) fps_rate = Math.floor(1000 / cycleTime);
-
         // Resize dynamically
-        canvas.width = window.innerWidth / 2;
-        canvas.height = window.innerHeight / 2;
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
 
         // Draw Background
-        ctx.drawImage(WALLS[0], 0, 0, WIDTH * 4, HEIGHT); // Top half
-        ctx.drawImage(WALLS[0], 0, HEIGHT, WIDTH * 4, HEIGHT); // Bottom half
+        ctx.drawImage(WALLS[0], canvas.width / 2 - HALF_WIDTH, canvas.height / 2 - HALF_HEIGHT, WIDTH, HEIGHT);
 
-        // Draw FPS
-        ctx.fillStyle = 'black';
-        ctx.font = '1vi Arial';
-        ctx.fillText('FPS: ' + fps_rate, 5, 15);
-        let temp = 15;
         for (i in users) {
             let itUser = users[i];
 
             if (itUser.userId == socket.id) {
-                ctx.fillText(itUser.name, 5, 30 + Object.keys(users).indexOf(itUser.name) * 15 + temp);
-                temp += 15;
-    
+                
                 // Raycast users
                 var userX = itUser.playerX;
                 var userY = itUser.playerY;
                 var userAngle = itUser.playerAngle;
-    
+
                 // Raycasting
-                var currentAngle = userAngle + HALF_FOV;
                 var rayStartX = Math.floor(userX / MAP_SCALE) * MAP_SCALE;
                 var rayStartY = Math.floor(userY / MAP_SCALE) * MAP_SCALE;
-    
+
                 // Calculate map & player offsets
-                var mapOffsetX = Math.floor(canvas.width / 2 - HALF_WIDTH);
-                var mapOffsetY = Math.floor(canvas.height / 2 - HALF_HEIGHT);
+                var mapOffsetX = Math.floor(HALF_WIDTH - HALF_WIDTH);
+                var mapOffsetY = Math.floor(HALF_WIDTH - HALF_HEIGHT);
                 var playerMapX = (userX / MAP_SCALE) * 5 + mapOffsetX;
                 var playerMapY = (userY / MAP_SCALE) * 5 + mapOffsetY;
-    
+
                 // loop for casted rays
                 for (var ray = 0; ray < WIDTH; ray++) {
                     // get current angle sin & cos
                     var currentSin = Math.sin(currentAngle); currentSin = currentSin ? currentSin : .000001;
                     var currentCos = Math.cos(currentAngle); currentCos = currentCos ? currentCos : .000001;
-    
+
                     // vertical line intersection
                     var rayEndX, rayEndY, rayDirectionX, verticalDepth, textureEndY, textureY;
                     if (currentSin > 0) { rayEndX = rayStartX + MAP_SCALE; rayDirectionX = 1 }
@@ -254,7 +238,7 @@
                         rayEndX += rayDirectionX * MAP_SCALE;
                     }
                     textureEndY = rayEndY;
-    
+
                     // horizontal line intersection
                     var rayEndY, rayEndX, rayDirectionY, horizontalDepth, textureEndX, textureX;
                     if (currentCos > 0) { rayEndY = rayStartY + MAP_SCALE; rayDirectionY = 1 }
@@ -271,19 +255,15 @@
                         rayEndY += rayDirectionY * MAP_SCALE;
                     }
                     textureEndX = rayEndX;
-    
+
                     // render 3D projection
                     var depth = verticalDepth < horizontalDepth ? verticalDepth : horizontalDepth;
                     var textureImage = verticalDepth < horizontalDepth ? textureY : textureX;
                     var textureOffset = verticalDepth < horizontalDepth ? textureEndY : textureEndX;
                     textureOffset = textureOffset - Math.floor(textureOffset / MAP_SCALE) * MAP_SCALE;
                     depth *= Math.cos(userAngle - currentAngle);
-                    var wallHeight = Math.min(Math.floor(MAP_SCALE * 300 / (depth + 0.0001)), 50000);
-    
-                    ctx.save();
-                    ctx.beginPath();
-                    ctx.rect(0, 0, canvas.width / 2, canvas.height / 2);
-                    ctx.clip();
+                    var wallHeight = Math.min(Math.floor(MAP_SCALE * HEIGHT / (depth + 0.0001)), 50000);
+
                     ctx.drawImage(
                         WALLS[textureImage],
                         textureOffset,  // Source img x offset
@@ -295,26 +275,50 @@
                         1, // Target image width
                         wallHeight, // Target image height
                     );
-    
+
                     var currentAngle = userAngle + HALF_FOV - ray * STEP_ANGLE;
                     var raySin = Math.sin(currentAngle);
                     var rayCos = Math.cos(currentAngle);
-    
+
+                    // // Draw other users
+                    // for (let targetUser of Object.values(users)) {
+                    //     if (targetUser.userId !== socket.id) {
+                    //         let targetAngle = Math.atan2(targetUser.playerY - userY, targetUser.playerX - userX);
+                    //         let angleDiff = targetAngle - userAngle;
+                    //         if (angleDiff > Math.PI) angleDiff -= DOUBLE_PI;
+                    //         if (angleDiff < -Math.PI) angleDiff += DOUBLE_PI;
+
+                    //         if (Math.abs(angleDiff) < HALF_FOV) {
+                    //             let distance = Math.sqrt((targetUser.playerX - userX) ** 2 + (targetUser.playerY - userY) ** 2);
+                    //             let targetHeight = Math.min(Math.floor(MAP_SCALE * HEIGHT / (distance + 0.0001)), 50000);
+                    //             let targetWidth = targetHeight * (yourImage.width / yourImage.height);
+                    //             let targetX = HALF_WIDTH + Math.tan(angleDiff) * HALF_WIDTH - targetWidth / 2;
+                    //             let targetY = HALF_HEIGHT - targetHeight / 2;
+
+                    //             ctx.drawImage(
+                    //                 FUNNY[targetUser.imgNum],
+                    //                 0, 0, yourImage.width, yourImage.height,
+                    //                 targetX, targetY, targetWidth, targetHeight
+                    //             );
+                    //         }
+                    //     }
+                    // }
+
                     for (var depth = 0; depth < MAP_RANGE; depth += 5) {
                         var targetX = userX + depth * raySin;
                         var targetY = userY + depth * rayCos;
-    
+
                         for (let targetUser of Object.values(users)) {
                             if (targetUser.userId !== itUser.userId) {
                                 let distance = Math.sqrt(Math.pow(targetUser.playerX - targetX, 2) + Math.pow(targetUser.playerY - targetY, 2));
                                 if (distance < 5) {
                                     var userDepth = depth * Math.cos(userAngle - currentAngle);
-                                    var userHeight = Math.min(Math.floor(MAP_SCALE * 300 / (userDepth + 0.0001)), 50000);
-                                    ctx.fillStyle = 'yellow';
+                                    var userHeight = Math.min(Math.floor(MAP_SCALE * HEIGHT / (userDepth + 0.0001)), 50000);
+                                    ctx.fillStyle = '#' + Math.floor(Math.random() * 16777215).toString(16);
                                     ctx.fillRect(
-                                        ray, 
-                                        (HALF_HEIGHT - Math.floor(userHeight / 2)), 
-                                        1, 
+                                        ray,
+                                        (HALF_HEIGHT - Math.floor(userHeight / 2)),
+                                        1,
                                         userHeight
                                     );
                                     break;
@@ -322,12 +326,12 @@
                             }
                         }
                     }
-    
+
                     ctx.restore();
                     currentAngle -= STEP_ANGLE;
-    
+
                 }
-    
+
                 if (itUser.userId == socket.id && showMap) {
                     // Draw 2d map
                     for (var row = 0; row < MAP_SIZE; row++) {
@@ -341,7 +345,7 @@
                                 ctx.fillRect(col * 5, row * 5, 5, 5);
                             }
                         }
-    
+
                         for (i in users) {
                             let itUser = users[i];
                             let color = itUser.userId != socket.id ? 'blue' : 'red';
@@ -358,8 +362,30 @@
                         }
                     }
                 }
-                
+
             }
+        }
+        // Update FPS
+        cycleCount++;
+        if (cycleCount >= 60) cycleCount = 0;
+        var startTime = Date.now();
+        var cycleTime = startTime - oldCycleTime;
+        oldCycleTime = startTime;
+        if (cycleCount % 60 == 0) fps_rate = Math.floor(1000 / cycleTime);
+
+        // Draw FPS
+        ctx.fillStyle = 'black';
+        ctx.font = '1vi Arial';
+        ctx.fillText('FPS: ' + fps_rate, 5, 15);
+        let temp = 15;
+
+        for (i in users) {
+            let itUser = users[i];
+            ctx.fillStyle = 'black';
+            ctx.font = '1vi Arial';
+
+            ctx.fillText(itUser.name, 5, 30 + Object.keys(users).indexOf(itUser.name) * 15 + temp);
+            temp += 15;
 
         }
 
